[gd_scene load_steps=3 format=3 uid="uid://dtrbka1ef726o"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_bq345"]
[ext_resource type="AudioStream" uid="uid://vvju7kwb86r8" path="res://assets/sounds/IMG_3527.mp3" id="2_kl8fp"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_bq345")

[node name="Timer1sec" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Bleh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kl8fp")

[node name="TimerBleh" type="Timer" parent="."]
wait_time = 0.57

[node name="Pop" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer1sec" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerBleh" to="." method="_on_timer_bleh_timeout"]
